# cmake-test

./: CMakeLists.txt
cmake/: dnnl.cmake  tbb.cmake
